12/9/13 make volume value bold
12/9/13 horizontally flip pH probe, connect wire to left side (control points for wire are wrong)
12/9/13 Basics: move pH indicator to right side of pH scale
12/9/13 move ticks to right side of pH scale
12/9/13 add a color-stop for 'neutral' to pH scale gradient (RGB=164,58,149)
12/9/13 use specified color for 'Chicken Soup'
12/9/13 rename Solute.LIME_SODA to Solute.SODA
12/7/13 flatten faucet type hierarchy, in preparation for reflecting water faucet
12/7/13 change request: add 'Chicken Soup', make it the default
12/6/13 feature request: add highlight around pH value display when the displayed value is '7.00'
12/5/13 add options for SoluteComboBox: increase lineWidth and cornerRadius
12/4/13 Solutions: partial implementation of linear concentration graph
12/4/13 add 'Basics' screen to 'pH Scale' sim only in dev mode
12/3/13 use saturated blue (as shown in design doc) for 'H2O' background in 'Molecule count' and graph indicator
12/3/13 use water color as the 'diluted' color for all solutions, as shown in the design doc
12/3/13 change colors of milk and spit, as shown in the design doc
12/3/13 when a diluted solution reads '7.00' on the pH meter, use water color
12/3/13 internal refactoring of Solution model, moved some functions to prototype, made color derived from solute and pH
12/3/13 change font on volume indicator to be same size as tick labels on the beaker
11/27/13 use 'water' instead of 'solvent' throughout, since our model only makes sense for water and we don't need to support other solvents
11/27/13 adjust touchArea of dropper so that it doesn't interfere with solute combo box
11/27/13 expand touchArea for expand/collapse buttons
11/27/13 expand touchArea for check boxes
11/27/13 review and cleanup of all code
11/27/13 move toTimesTenString to PHUtils
11/27/13 use fixed exponent of 25 for H2O molecule count, use 2 decimal places instead of 1
11/27/13 rename ChoiceSwitch to ABSwitch