@@ -42,15 +42,15 @@ define( function( require ) {
     ];
 
     thisModel.water = Water;
-    thisModel.beaker = new Beaker( new Vector2( 330, 600 ), new Dimension2( 400, 325 ) );
+    thisModel.beaker = new Beaker( new Vector2( 705, 600 ), new Dimension2( 400, 325 ) );
     var yDropper = 260;
     thisModel.dropper = new Dropper( Solute.CHICKEN_SOUP, new Vector2( thisModel.beaker.location.x + 40, yDropper ), new Bounds2( 250, yDropper, 510, yDropper ) );
     thisModel.solution = new Solution( thisModel.dropper.soluteProperty, 0, thisModel.water, 0, thisModel.beaker.volume );
-    thisModel.waterFaucet = new Faucet( new Vector2( 185, 230 ), -400,
+    thisModel.waterFaucet = new Faucet( new Vector2( 560, 230 ), 400,
       { enabled: thisModel.solution.volumeProperty.get() < thisModel.beaker.volume } );
     thisModel.drainFaucet = new Faucet( new Vector2( thisModel.beaker.right + 100, 652 ), thisModel.beaker.right,
       { enabled: thisModel.solution.volumeProperty.get() > 0 } );
-    thisModel.pHMeter = new PHMeter( new Vector2( 810, 20 ), new Bounds2( 10, 150, 835, 680 ), new Vector2( 605, 405 ), new Bounds2( 30, 150, 966, 680 ) );
+    thisModel.pHMeter = new PHMeter( new Vector2( 175, 20 ), new Bounds2( 10, 150, 835, 680 ), new Vector2( 175, 600 ), new Bounds2( 30, 150, 966, 680 ) );
 
     // Enable faucets and dropper based on amount of solution in the beaker.
     thisModel.solution.volumeProperty.link( function( volume ) {
